k3s/booking-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: tickrush
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
